Start to use FFI